[gd_scene load_steps=13 format=3 uid="uid://bi276k3vjtlug"]

[ext_resource type="Texture2D" uid="uid://bmih7e20oqmcm" path="res://assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 7/1.png" id="1_2tsxm"]
[ext_resource type="Script" path="res://scenes/select/steam_lobby.gd" id="1_v8v3r"]
[ext_resource type="Shader" path="res://scenes/main/scroll_menu.gdshader" id="2_5mvp6"]
[ext_resource type="Texture2D" uid="uid://coftmjhpdvn8h" path="res://assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 7/2.png" id="3_q6skp"]
[ext_resource type="Shader" path="res://scenes/main/scroll_menu2.gdshader" id="4_e0g1x"]
[ext_resource type="Texture2D" uid="uid://13gldhyufq8h" path="res://assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 7/3.png" id="5_nigj1"]
[ext_resource type="Shader" path="res://scenes/main/scroll_menu3.gdshader" id="6_q0vjd"]
[ext_resource type="Texture2D" uid="uid://b1wa2hp51td42" path="res://assets/free-sky-with-clouds-background-pixel-art-set/Clouds/Clouds 7/4.png" id="7_pmdkv"]
[ext_resource type="FontFile" uid="uid://cw6hv1tq5uaod" path="res://fonts/ThaleahFat.ttf" id="8_el46c"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0l446"]
shader = ExtResource("2_5mvp6")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_hily5"]
shader = ExtResource("4_e0g1x")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c3mna"]
shader = ExtResource("6_q0vjd")

[node name="join_lobby" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v8v3r")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_2tsxm")

[node name="TextureRect2" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_0l446")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_q6skp")

[node name="TextureRect3" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_hily5")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_nigj1")

[node name="TextureRect4" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_c3mna")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_pmdkv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
offset_left = 160.0
offset_top = 40.0
offset_right = 480.0
offset_bottom = 344.0
theme_override_constants/separation = 23

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_el46c")
theme_override_font_sizes/font_size = 30
text = "JoIN LOBBY
"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_el46c")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1

[node name="private" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_el46c")
theme_override_font_sizes/font_size = 25
text = "PRIVATE
"

[node name="public" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_el46c")
theme_override_font_sizes/font_size = 25
text = "PUBLIC 
"

[node name="host" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("8_el46c")
theme_override_font_sizes/font_size = 25
text = "HOST
"

[node name="MultiplayerSpawner" type="MultiplayerSpawner" parent="."]
spawn_path = NodePath("..")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.225
anchor_bottom = 0.622
offset_right = 8.0
offset_bottom = 0.0799866

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/host" to="." method="_on_host_pressed"]
